src/slurm-12315.out
Traceback (most recent call last):
  File "main.py", line 14, in <module>
    from net import *
  File "/home/LAB/penghao/Pixel-SkelNetOn---CVPR-2020-workshop/src/net/__init__.py", line 1, in <module>
    from .baseline import *
  File "/home/LAB/penghao/Pixel-SkelNetOn---CVPR-2020-workshop/src/net/baseline.py", line 6, in <module>
    from .resnet import ResNet50
  File "/home/LAB/penghao/Pixel-SkelNetOn---CVPR-2020-workshop/src/net/resnet.py", line 262
    def forward(self,x):
                       ^
IndentationError: unindent does not match any outer indentation level
